--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.0.0",
-    "express": "^4.17.0",
+    "axios": "^0.19.2",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "mysql2": "^1.6.5",
+    "request": "^2.88.2",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
