Lots of overhauling and adding logon. Still working on DOM. Co-authored-by: SamanthaCoke <samanthacokeclark@gmail.com> Co-authored-by: RubixUnderlord <robbysaldi@yahoo.com> Co-authored-by: aliffbm <aliff.macapinlac@gmail.com>

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
   "development": {
     "username": "project2",
     "password": "SecretPassword",
-    "database": "exampledb",
+    "database": "fooddb",
     "host": "localhost",
     "dialect": "mysql"
   },
