--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "jquery": "^3.4.1",
+    "jsdom": "^16.2.1",
     "mysql2": "^1.6.5",
+    "passport": "^0.4.1",
     "request": "^2.88.2",
     "sequelize": "^5.21.5"
   },
