--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "license": "ISC",
   "dependencies": {
+    "ajax": "0.0.4",
     "axios": "^0.19.2",
+    "canvas": "^2.6.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
@@ -20,6 +22,7 @@
     "mysql2": "^1.6.5",
     "passport": "^0.4.1",
     "request": "^2.88.2",
+    "router": "^1.3.5",
     "sequelize": "^5.21.5"
   },
   "devDependencies": {
