--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
     "jquery": "^3.4.1",
     "jsdom": "^16.2.1",
     "mysql2": "^1.6.5",
     "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "request": "^2.88.2",
     "router": "^1.3.5",
     "sequelize": "^5.21.5"
